# Migration-script

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Procfile  RAILWAY_DEPLOY.md  README.md  V5_recherche_ads_complete.py  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  run.py  scheduler.py
.github/workflows/: ci.yml
app/: __init__.py  api_tracker.py  background_worker.py  cache.py  config.py  dashboard.py  database.py  gemini_classifier.py  http_client.py  meta_api.py  run_migration.py  search_executor.py  shopify_detector.py  utils.py  web_analyzer.py
docs/: API.md
migrations/: 001_add_user_id_columns.sql
scripts/: cleanup_duplicates.py
src/: __init__.py
src/application/: __init__.py
src/application/ports/: __init__.py
src/application/ports/repositories/: __init__.py  ad_repository.py  collection_repository.py  page_repository.py  search_log_repository.py  (+1 more)
src/application/use_cases/: __init__.py  analyze_website.py  classify_sites.py  detect_winning_ads.py  search_ads.py  search_executor.py
src/domain/: __init__.py  exceptions.py
src/domain/entities/: __init__.py  ad.py  collection.py  job.py  notification.py  page.py  user.py  winning_ad.py
src/domain/ports/: __init__.py  audit_repository.py  job_queue.py  notification_repository.py  state_storage.py  tenant_aware.py  tenant_context.py  user_repository.py
src/domain/services/: __init__.py  page_state_calculator.py  winning_ad_detector.py
src/domain/value_objects/: __init__.py  ad_id.py  cms.py  currency.py  etat.py  page_id.py  reach.py  role.py  thematique.py  url.py  user_id.py
src/infrastructure/: __init__.py  container.py  tenant_filter.py
src/infrastructure/adapters/: __init__.py  memory_job_queue.py  memory_notification_repository.py  memory_state_storage.py  null_tenant_context.py  streamlit_tenant_context.py
src/infrastructure/backup/: __init__.py  config.py  scheduler.py  service.py
src/infrastructure/cache/: __init__.py
src/infrastructure/config/: __init__.py  settings.py
src/infrastructure/email/: __init__.py  service.py  templates.py
src/infrastructure/export/: __init__.py  blacklist.py  csv_exporter.py
src/infrastructure/external_services/: __init__.py  gemini_classifier.py  meta_ads_adapter.py  meta_api.py
src/infrastructure/http/: __init__.py  resilient_client.py
src/infrastructure/logging/: __init__.py  config.py
src/infrastructure/monitoring/: __init__.py  api_tracker.py
src/infrastructure/persistence/: __init__.py  database.py  sqlalchemy_page_repository.py  sqlalchemy_winning_ad_repository.py  user_repository.py
src/infrastructure/scrapers/: __init__.py  cms_detector.py  gemini_batch_classifier.py  market_spy.py  web_analyzer.py
src/infrastructure/workers/: __init__.py  background_worker.py
src/presentation/: __init__.py
src/presentation/api/: __init__.py  config.py  dependencies.py  main.py
src/presentation/streamlit/: __init__.py  dashboard.py  shared.py
src/presentation/view_models/: __init__.py  page_view_model.py  search_view_model.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_sqlalchemy_page_repository.py
tests/unit/application/: __init__.py  test_oauth_login.py  test_password_reset.py  test_use_cases.py  test_webhook_handlers.py
tests/unit/domain/: __init__.py  test_additional_coverage.py  test_entities.py  test_exceptions.py  test_services.py  test_tenant_context.py  test_user_id.py  test_value_objects.py
tests/unit/infrastructure/: __init__.py  test_backup.py  test_container.py  test_email.py  test_page_repository.py  test_state_storage.py  test_winning_ad_repository.py
tests/unit/presentation/: __init__.py  test_api.py  test_oauth.py  test_view_models.py
(+118 files in other folders)
